--- a/style.css
+++ b/style.css
@@ -149,3 +149,53 @@ button{
     height: 220px;
     margin-bottom: 120px;
 }
+.lower-sec{
+    display: flex;
+    width: 100%;
+    background-color: rgb(152, 7, 255);
+    padding-bottom: 110px;
+}
+.about-sec img{
+    width: 85%;
+    border-radius: 15px;
+    margin-right: 40px;
+    margin-top: 25px;
+    
+}
+.about-sec h1 span{
+    color: orange;
+}
+.about-sec h1{
+    font-size: 35px;
+    font-weight: 700;
+}
+.about-sec{
+    width: 30%;
+    margin-left: 40px;
+    padding-top: 40px;
+    color: whitesmoke;
+}
+.about-sec i{
+    line-height: 35px;
+    padding-right: 15px;
+    color: rgb(255, 185, 55);
+    
+}
+.footer-style{
+    text-align: center;
+    color: gray;
+    padding-top: 10px;
+    font-size: 25px;
+}
+.footer-style p{
+    color: wheat;
+}
+.footer-section{
+    width: 100%;
+    height: 180px;
+    background-color: rgb(24, 18, 29);
+    padding-bottom: 40px;
+}
+.footer-style span{
+    color: orange;
+}
